--- a/lecture1/index.html
+++ b/lecture1/index.html
@@ -5,6 +5,16 @@
 	</head>
 	
 	<style type="text/css">
+		body {
+			background:#eee;
+			font-family: Helvetica, Arial, sans-serif;
+		}
+		h3 {
+			font-size:22px;
+			font-weight:300;
+			color:#aaa;
+		}
+
 	</style>
 	
 	<body>
